--- a/eyes/templates/base.html
+++ b/eyes/templates/base.html
@@ -20,11 +20,11 @@
 
 		<div id="header">
 			  <ul id="navigation">
-				<li><a href= "/">home</a></li>
+				<li><a href= "/home">home</a></li>
 				{% if user.is_authenticated %}
 				<li>{{ user.username }}</li>
 				{% else %}
-				<li>Please Log In</li>
+				<li><a href= "/accounts/login">Please Log In</a></li>
 				{% endif %}
 				<li><a href= "/accounts/logout" >signout</a></li>
 			  </ul>
