--- a/eyes/templates/eyes/mainviewer.html
+++ b/eyes/templates/eyes/mainviewer.html
@@ -94,35 +94,27 @@ $(function(){
    });
 });
 
+// Show and Hide comments
+
+$(function(){
+   $('.commentbutton').click(function(){
+   	  // $(this).hide();
+      $('.itemcomments').show();
+      // $('#id_fileitem').val("");
+      // $('#itemfileitem').hide();       
+      // $('.hidecomments').show();     
+      return false;
+   });
+});
+
+
+
+
 
 
   </script>
+
   <style>
-
-
-#id_title, #id_url, #id_fileitem, #id_comments {
-
-}
-
-
-.itemformlabel {
-	text-align: right;	
-	display: inline-block;
-	width: 120px;
-}
-
-.todoformlabel {
-	text-align: right;	
-	display: inline-block;
-	width: 120px;
-}
-
-.submitbutton {
-	font-size: 12px;
-	margin-left: 100px;
-
-}
-
   </style>
 
  {% endblock %}  
@@ -146,14 +138,14 @@ $(function(){
 			<h1>{{projectname}} 
 				<input type="button" value= "+" class="showitemform"/>
 				<input type="button" style="display:none"  value= "-" class="hideitemform"/>
+				<input type="button" value= "subscribe" class="subscribe"/>
+				<input type="button" value= "unsubscribe" class="unsubscribe"/>
 			</h1>
-
-
-
 
 
 				<form method="post"  style='display:none' class ='itemform' enctype="multipart/form-data">
 
+		<!-- Form to add items -->
 					{% csrf_token %}
 <!-- 
 					    	{{additemform.as_p}} -->
@@ -178,14 +170,18 @@ $(function(){
 				<input type="submit" value= "Submit" name="additem" class="submitbutton"/>
 		    	</form>
 
+		<!-- Listing of items in project -->
 
-
+			<!-- sticky items first -->
+		    	<form method="post"> {% csrf_token %}
 		    {% if latest_items_list_sticky or latest_items_list %}
 		    <ul>
-		    {% for item in latest_items_list_sticky %}
 
-					<li style="list-style-type: none">
+		    {% for item in latest_items_list_sticky %}
+						
+					<li style="list-style-type: none">	
 						<div>
+							<input type="checkbox" name="deleteitem" value="{{item.id}}"/>	    						
 						{% if item.url %}
 							<span id="title"><em><a href='{{item.url}}'>{{item.title}}</a></em></span>
 						{% else %}
@@ -194,18 +190,40 @@ $(function(){
 
 							<span id="comments">{{item.comments}}</span>	
 						</div>
+						<input type="button" value="comments" class="commentbutton"/>
 						<span id="update_user">Updated by {{item.update_user}}</span>			 
 						<span id="update_date"> on {{item.update_date}}</span>		
-						<span id="create_date">Created on {{item.create_date}}</span>						
+						<span id="create_date">Created on {{item.create_date}}</span>				
 					</li>
 
+					<ul>
+
+					{% for comment in comments%}
+
+						{% ifequal item.title|lower comment.item|lower %}
+		<!-- 	for some reason does not work unless they are both put in same case, i didnt try anything else because it worked -->
+						<li class="itemcomments" style="display:none">
+							<div>
+							{{comment.title}} 
+							</div>
+							<div>
+							{{comment.comment}} 
+							</div>
+							</li>
+						{% endifequal %}
+
+					{% endfor %}	
+
+					</ul>
 		    {% endfor %}
 
+		    <!-- the non sticky items -->
 		    	<br>
 		    {% for item in latest_items_list %}
 
 					<li style="list-style-type: none">
 						<div>
+							<input type="checkbox" name="deleteitem" value="{{item.id}}"/>
 						{% if item.url %}
 							<span id="title"><a href='{{item.url}}'>{{item.title}}</a></span>
 						{% elif item.fileitem %}
@@ -216,14 +234,40 @@ $(function(){
 
 							<span id="comments">{{item.comments}}</span>	
 						</div>
+						<input type="button" value="comments" class="commentbutton"/>
 						<span id="update_user">Updated by {{item.update_user}}</span>			 
 						<span id="update_date"> on {{item.update_date}}</span>		
 						<span id="create_date">Created on {{item.create_date}}</span>						
 					</li>
 
+					<ul>
+
+					{% for comment in comments%}
+
+						{% ifequal item.title|lower comment.item|lower %}
+		<!-- 	for some reason does not work unless they are both put in same case, i didnt try anything else because it worked -->
+						<li class="itemcomments" style="display:none">
+							<div>
+							{{comment.title}} 
+							</div>
+							<div>
+							{{comment.comment}} 
+							</div>
+							</li>
+						{% endifequal %}
+
+					{% endfor %}	
+
+					</ul>
+
+			<!-- 		<form method="post" style="display:none" class="">{% csrf_token %}
+					{{commentform.as_p}}
+					</form> -->
+
+
 		    {% endfor %}
-
-
+		    	<input type="submit" value= "Delete" name="deleteitems"/>
+		    	</form>
 		    </ul>
 		{% else %}
 		    <p>No items are available.</p>
@@ -233,32 +277,39 @@ $(function(){
 	   		</div><!-- end main area -->
 
 	   		<div id='sidebar'>
+				
 
-				<div id='todolist'>	
+				<div id='todolist'>	<!-- start of todolist -->
 					<h4>
 						<span>To do list </span>				
 						<input type="button" value= "+" class="showtodoform"/>
 						<input type="button" style="display:none"  value= "-" class="hidetodoform"/>
 					</h4>
+					
+					<form method="post"> {% csrf_token %}
+					<ul id='sortable'  style='list-style-type: none'>
 
-				<ul id='sortable'  style='list-style-type: none'>
+						{% for todo in todolist %}
+						<li>
+						<div>
+							<input type="checkbox" name="deletetodo" value="{{todo.id}}"/>
+							<span id='todotitle'>{{todo.title}}</span><span id='tododuedate'>{{todo.due_date}}</span><span id='todoowner'>{{todo.owner}}</span>
+						</div>
 
-					{% for todo in todolist %}
-					<li>
-					<div>
-						<span id='todotitle'>{{todo.title}}</span><span id='tododuedate'>{{todo.due_date}}</span><span id='todoowner'>{{todo.owner}}</span>
-					</div>
+							{% if todo.description %}
+						<div id='todocomment'>
+							<span>{{todo.description}}</span>
+						</div>
+							{% else %}
+							{% endif %}
+						</li>
+						{% endfor %}
 
-						{% if todo.description %}
-					<div id='todocomment'>
-						<span>{{todo.description}}</span>
-					</div>
-						{% else %}
-						{% endif %}
-					</li>
-					{% endfor %}
 
-				</ul>
+					</ul>
+					<input type="submit" value="Delete" name= "deletetodos"/>
+
+					</form>
 
 				<!-- To do list form -->
 				<form method="post" style="display:none" class="todoform">{% csrf_token %}
